# gitcoco

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  release.yml
scripts/: release-version.sh
src/: cli.rs  main.rs
src/cmd/: commit.rs
src/conventional/: config.rs
